@@ -104,6 +104,14 @@ docking point to dock the handlebox; one of:
 <literal>gtk.POS_TOP</literal>, <literal>gtk.POS_BOTTOM</literal></entry>
 	    </row>
 
+	    <row valign="top">
+	      <entry>"snap-edge-set"</entry>
+	      <entry>Read-Write</entry>
+	      <entry>If <literal>TRUE</literal>, use the value from
+"snap-edge"; otherwise, use a value derived from "handle-position".
+Available in GTK+ 2.2 and above.</entry>
+	    </row>
+
 	  </tbody>
 	</tgroup>
       </informaltable>
