@@ -11,6 +11,9 @@
 	* pygtk-gtkfontselectiondialog.xml Add note about lack of font filters,
 	etc. in GTK+ 2.2 and above.
 
+	* pygtk-gtkhandlebox.xml Add "snap-edge-set" property description.
+	GTK+ 2.2 and above.
+
 2004-04-07  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtkfilechooser.xml Add.
